--- a/web/Login-lavish.html
+++ b/web/Login-lavish.html
@@ -37,7 +37,7 @@
         </div>
 
         <div class="form__field">
-          <label class="fontawesome-lock" for="login__password"><span class="hidden">Password</span></label>
+          <label class="fontawesome-lock" for="login__password">kjjdfjhdfsfns,dfmnm<span class="hidden">Password</span></label>
           <input id="login__password" type="password" class="form__input" placeholder="Password" required name="password">
         </div>
 
